--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
+  qr_flutter: ^4.1.0
+  confetti: ^0.7.0
+  flutter_barcode_scanner: ^2.0.0
+  fluttertoast: ^8.2.4
   
 
 dev_dependencies:
